# Issue-Companion

./: .gitignore  README.md  compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  embedding.py
backend/data/: employees.json  instructions.json  issues.json
